Bug 1019851.patch, Do not assert when asking for folderURL of root folder, r=standard8, a=ryanvm